<resources>
    <string name="app_name">Maréu</string>
    <string name="date_filter">Date</string>
    <string name="txt_empty_meetings_recyclerview">No meetings</string>
    <string name="reunion_couleur_description">Meeting color</string>
    <string name="garbage_icon_description">Garbage icon</string>
    <string name="create_meeting_title">Nouvelle réunion:</string>
    <string name="label_meeting_place">Lieu</string>
    <string name="label_meeting_topic">Sujet</string>
    <string name="label_meeting_participant">Participant</string>
    <string name="buton_label_add_participant">AJOUTER</string>
    <string name="buton_label_save_meeting">CREER</string>
    <string name="label_meeting_date_time">Date et heure</string>
    <string name="place_filter">Salle</string>
    <string name="date_filter_title">Filtrer par date</string>
    <string name="room_filter_title">Filtrer par salle</string>
    <string name="label_room_filter_selector">Lieu</string>
    <string name="text_btn_ok_room_filter">OK</string>
    <string name="text_btn_cancel_room_filter">ANNULER</string>
    <string name="label_start_date_filter_selector">Date de début</string>
    <string name="label_end_date_filter_selector">Date de fin</string>
    <string name="text_btn_ok_date_filter">OK</string>
    <string name="text_btn_cancel_date_filter">ANNULER</string>
    <string name="default_filter">Défaut</string>
</resources>
