<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/date_filter_padding">

    <TextView
        android:id="@+id/tv_date_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/date_filter_components_margin"
        android:text="@string/date_filter_title"
        android:textSize="@dimen/date_filter_title_size"
        app:layout_constraintBottom_toTopOf="@id/date_filter_start_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_filter_start_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/date_filter_components_margin"
        android:hint="@string/label_start_date_filter_selector"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_event_gray_24dp"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@id/date_filter_end_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_filter_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date_filter_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_filter_end_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/date_filter_components_margin"
        android:hint="@string/label_end_date_filter_selector"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_event_gray_24dp"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@id/btn_date_filter_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_filter_start_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date_filter_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_date_filter_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/date_filter_components_margin"
        android:text="@string/text_btn_ok_date_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_date_filter_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_filter_end_container" />

    <Button
        android:id="@+id/btn_date_filter_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/date_filter_components_margin"
        android:text="@string/text_btn_cancel_date_filter"
        app:layout_constraintBottom_toBottomOf="@id/btn_date_filter_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_date_filter_ok"
        app:layout_constraintTop_toTopOf="@id/btn_date_filter_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>